Preparar proyecto para deployment en Railway y Vercel
- Configurar Django para producción con soporte para Railway
- Agregar soporte para DATABASE_URL y variables de entorno
- Configurar WhiteNoise para archivos estáticos
- Agregar gunicorn y dependencias de producción
- Configurar CORS dinámico desde variables de entorno
- Crear Procfile y runtime.txt para Railway
- Configurar frontend para usar API URL desde variables de entorno
- Agregar guía completa de deployment (DEPLOYMENT.md)
- Actualizar .gitignore para excluir archivos sensibles

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,65 @@
+# Python
 __pycache__/
 *.py[cod]
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+venv/
+.venv/
+env/
+ENV/
+
+# Django
 *.sqlite3
 *.sqlite3-journal
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+staticfiles/
+media/
+
+# Environment variables
 .env
+.env.local
+.env.production
+.env.*.local
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Node.js (Frontend)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Frontend build
+dist/
+dist-ssr/
+*.local
+
+# Testing
+.coverage
+htmlcov/
+.pytest_cache/
+.tox/
+
+# Railway/Heroku
+*.env.production.local
+
+# Logs
+logs/
+*.log
