--- a/REST frameworks/ReservaProject/requirements.txt
+++ b/REST frameworks/ReservaProject/requirements.txt
@@ -11,3 +11,8 @@ django-cryptography==1.1
 django-cors-headers==4.6.0
 django-filter==24.3
 cryptography==46.0.3
+
+# Dependencias para producción (Railway/Heroku)
+gunicorn==23.0.0
+whitenoise==6.9.0
+dj-database-url==2.3.0
