Configurar deployment todo-en-uno en Railway
- Django ahora sirve el frontend React desde el mismo dominio
- Agregar script build.sh para construir frontend en deployment
- Actualizar Procfile para ejecutar build del frontend
- Configurar settings.py para servir archivos estáticos de React
- Actualizar urls.py para servir index.html en rutas no-API
- Simplificar CORS (no necesario en mismo dominio)
- Crear guía completa RAILWAY_DEPLOYMENT.md
- Actualizar variables de entorno de ejemplo

Ventajas:
- Una sola URL para backend + frontend
- No necesita configurar CORS
- Más simple y económico para apps de prueba
- Deploy automático desde GitHub

--- a/REST frameworks/ReservaProject/.env.production.example
+++ b/REST frameworks/ReservaProject/.env.production.example
@@ -1,5 +1,5 @@
 # ===================================================================
-# Variables de entorno para PRODUCCIÓN (Railway)
+# Variables de entorno para PRODUCCIÓN (Railway - Todo en uno)
 # ===================================================================
 # IMPORTANTE: No subir este archivo con valores reales a Git
 # Configura estas variables en el dashboard de Railway
@@ -26,7 +26,7 @@ ALLOWED_HOSTS=your-app-name.up.railway.app
 # IMPORTANTE: Genera una clave nueva para producción
 FIELD_ENCRYPTION_KEY=generate-a-new-key-for-production-32-bytes
 
-# CORS Configuration
-# URL de tu frontend en Vercel (separadas por coma, sin espacios)
-# Ejemplo: https://your-frontend.vercel.app,https://www.your-custom-domain.com
-CORS_ALLOWED_ORIGINS=https://your-frontend.vercel.app
+# CORS Configuration (OPCIONAL)
+# En Railway, frontend y backend están en el mismo dominio, no necesitas CORS
+# Solo configura esto si planeas agregar un frontend adicional en otro dominio
+# CORS_ALLOWED_ORIGINS=https://otro-dominio.com
