--- a/REST frameworks/ReservaProject/Procfile
+++ b/REST frameworks/ReservaProject/Procfile
@@ -1,2 +1,2 @@
 web: gunicorn ReservaProject.wsgi --log-file -
-release: python manage.py migrate && python manage.py collectstatic --noinput
+release: bash ../../build.sh && python manage.py migrate && python manage.py collectstatic --noinput
