Cleanup: Limpieza completa del repositorio
Eliminados:
- Archivos .DS_Store (macOS)
- Directorio .git-rewrite/ (respaldo temporal)
- 14 capturas de pantalla duplicadas en raíz
- 7 documentos de troubleshooting temporal
- 5 scripts de test obsoletos en raíz
- 5 scripts de desarrollo temporal en backend
- Todos los archivos __pycache__/ y *.pyc

Actualizado:
- .gitignore mejorado para prevenir futuros archivos innecesarios
  - Sección macOS más completa
  - Exclusión de .git-rewrite/
  - Exclusión de archivos temporales

Resultado:
- Repositorio más limpio y organizado
- Screenshots mantenidos en docs/screenshots/
- Solo documentación relevante

--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,11 @@ media/
 *.swp
 *.swo
 *~
+
+# macOS
 .DS_Store
+.AppleDouble
+.LSOverride
 
 # Node.js (Frontend)
 node_modules/
@@ -63,3 +67,12 @@ htmlcov/
 # Logs
 logs/
 *.log
+
+# Git helpers
+.git-rewrite/
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~.nib
